# MyVideoProcesser

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: VideoProcessor.cpp  VideoProcessor.hpp
src/filters/: FlickerRemovalFilter.cpp  FlickerRemovalFilter.hpp  NormalMapBlendFilter.cpp  NormalMapBlendFilter.hpp  StructuralBlendFilter.cpp  StructuralBlendFilter.hpp  VideoFilter.hpp
